@@ -20,7 +20,11 @@
   if($_POST){
     $edit_cmd = "interfaceconfig edit $edit_item ";
     foreach($_POST as $key => $val){
-      $parts[] = "$key=\"$val\""; 
+      if (is_array($val)) {
+        $parts[] = "$key=\"" . join(",", $val) . "\"";
+      } else {
+        $parts[] = "$key=\"$val\""; 
+      }
     }
     $edit_cmd.=implode(", ", $parts);
 
@@ -34,62 +38,29 @@
 
   print "<form name='edit' method='post' action='/$current_top/" . $current_sub . "_edit.php?item=$edit_item'>";
   print "<div id='add'><table>";
-  print "<tr><td><img src='../images/node.png'></td><td valign='middle' colspan=2><b>Editing: ".$edit_info->rows[0]['ip']."</b></td></tr>";
+  print "<tr><td><img src='../images/node.png'></td><td valign='middle' colspan=2><b>Editing: ".$edit_info->rows[0]['interface']."</b></td></tr>";
   foreach($edit_info->rows[0] as $key => $val){
     if($key == $edit_info->key){
       continue;
     }
-    if($key == "ip") {
+    if($key == "interface") {
       continue;
     }
 
     $pretty_key = pretty_header("configuration-interfaces", $key);
-    if (($key == 'SNMPVersion') || ($key == 'SNMPVersionTrap')) {
+    if ($key == 'type') {
       print "<tr><td></td><td>$pretty_key:</td><td>";
-      printSelect( array('' => 'please choose', '1' => '1', '2c' => '2c', '3' => '3'), 'hash', $val, "name='$key'");
-    } elseif ($key == 'mode') {
-      print "<tr><td></td><td>$pretty_key:</td><td>";
-      printSelect( array('' => 'please choose', 'discovery' => 'discovery', 'ignore' => 'ignore', 'production' => 'production', 'registration' => 'registration', 'testing' => 'testing'), 'hash', $val, "name='$key'");
-    } elseif ($key == 'type') {
-      print "<tr><td></td><td>$pretty_key:</td><td>";
-      printSelect( array('' => 'please choose',
-                         '3COM::NJ220' => '3COM NJ220', 
-                         '3COM::SS4200' => '3COM SS4200', 
-                         '3COM::SS4500' => '3COM SS4500', 
-                         'Accton::ES3526XA' => 'Accton ES3526XA', 
-                         'Accton::ES3528M' => 'Accton ES3528M', 
-                         'Cisco::Aironet_1130' => 'Cisco Aironet 1130', 
-                         'Cisco::Aironet_1242' => 'Cisco Aironet 1242', 
-                         'Cisco::Aironet_1250' => 'Cisco Aironet 1250', 
-                         'Cisco::Catalyst_2900XL' => 'Cisco Catalyst 2900XL', 
-                         'Cisco::Catalyst_2950' => 'Cisco Catalyst 2950', 
-                         'Cisco::Catalyst_2960' => 'Cisco Catalyst 2960', 
-                         'Cisco::Catalyst 2970' => 'Cisco Catalyst 2970', 
-                         'Cisco::Catalyst 3500XL' => 'Cisco Catalyst 3500XL', 
-                         'Cisco::Catalyst_3550' => 'Cisco Catalyst 3550', 
-                         'Cisco::Catalyst_3560' => 'Cisco Catalyst 3560', 
-                         'Cisco::Controller_4400_42_130' => 'Cisco Controller 4400', 
-                         'Cisco::WLC_2106' => 'Cisco WLC 2106', 
-                         'Dell::PowerConnect3424' => 'Dell PowerConnect 3424', 
-                         'Enterasys::SecureStack_C2' => 'Enterasys SecureStack C2', 
-                         'HP::Procurve_2500' => 'HP Procurve 2500', 
-                         'HP::Procurve_2600' => 'HP Procurve 2600', 
-                         'HP::Procurve4100' => 'HP Procurve 4100',
-                         'Intel::Express_460' => 'Intel Express 460',
-                         'Intel::Express_530' => 'Intel Express 530',
-                         'Linksys::SRW224G4' => 'Linksys SRW224G4',
-                         'Nortel::BayStack4550' => 'Nortel BayStack 4550',
-                         'Nortel::BayStack470' => 'Nortel BayStack 470',
-                         'Nortel::BayStack5520' => 'Nortel BayStack 5520',
-                         'Nortel::BayStack5520Stacked' => 'Nortel BayStack 5520 Stacked',
-                         'Nortel::BPS2000' => 'Nortel BPS 2000',
-                         'Nortel::ES325' => 'Nortel ES325',
-                         'PacketFence' => 'PacketFence'
-                    ), 
-                   'hash', $val, "name='$key'");
-    } elseif ($key == 'cliTransport') {
-      print "<tr><td></td><td>$pretty_key:</td><td>";
-      printSelect( array('' => 'please choose', 'Telnet' => 'Telnet', 'ssh' => 'SSH'), 'hash', $val, "name='$key'");
+      print "\n<select multiple name='$key" .  "[]'>";
+      $my_values = explode(",", $val);
+      $my_options = array('dhcplistener' => 'dhcplistener', 'internal' => 'internal', 'managed' => 'managed', 'monitor' => 'monitor');
+      foreach ($my_options as $option_val => $option_txt) {
+        if (in_array($option_val, $my_values)) {
+          print "<option value='$option_val' SELECTED>$option_txt</option>\n";
+        } else {
+          print "<option value='$option_val'>$option_txt</option>\n";
+        }
+      }
+      print "</select>\n";
     } else {
       print "<tr><td></td><td>$pretty_key:</td><td><input type='text' name='$key' value='$val'>";
     }
