@@ -41,6 +41,8 @@
         show switches section in web admin GUI only in VLAN 
           isolation mode
           (http://www.packetfence.org/mantis/view.php?id=571)
+        moved interface configuration into separate HTML page
+          (http://www.packetfence.org/mantis/view.php?id=573)
 
 1.8.0
         unify log management
